@@ -1,6 +1,7 @@
 # This file is generated by Dist::Zilla::Plugin::CPANFile v6.029
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
+requires "Crypt::URandom" => "0.37";
 requires "Fcntl" => "0";
 requires "List::Util" => "1.29";
 requires "Math::Random::ISAAC" => "0";
